load("@aspect_bazel_lib//lib:transitions.bzl", "platform_transition_filegroup")
load("@rules_python//python:defs.bzl", "py_binary")
load("@rules_shell//shell:sh_binary.bzl", "sh_binary")

package(features = ["export-module"])

platform_transition_filegroup(
    name = "bin",
    srcs = [
        "//experiments/os/boot",
        "//experiments/os/kernel",
    ],
    target_platform = "//platforms:i386-kernel",
)

sh_binary(
    name = "qemu",
    srcs = ["qemu.sh"],
    args = ["$(rootpath :os)"],
    data = [":os"],
)

py_binary(
    name = "assembler",
    srcs = ["assembler.py"],
)

genrule(
    name = "os",
    srcs = [
        ":bin",
        "README.md",
    ],
    outs = ["os.bin"],
    cmd = "$(execpath :assembler) -o $@ $(SRCS)",
    tools = [":assembler"],
)

exports_files(["linker.ld"])
