load("@aspect_rules_deno//deno:defs.bzl", "deno_binary")
load("@rules_cc//cc:cc_binary.bzl", "cc_binary")
load("@rules_prolog//:prolog_binary.bzl", "prolog_binary")

[
    deno_binary(
        name = ts_file.removesuffix(".ts"),
        main = ts_file,
    )
    for ts_file in glob(["*.ts"])
]

[
    cc_binary(
        name = c_file.removesuffix(".c"),
        srcs = [c_file],
    )
    for c_file in glob(["*.c"])
]

[
    prolog_binary(
        name = pl_file.removesuffix(".pl"),
        srcs = [pl_file],
        goal = pl_file.removesuffix(".pl"),
    )
    for pl_file in glob(["*.pl"])
]
