load("@aspect_rules_deno//deno:defs.bzl", "deno_binary")

filegroup(
    name = "srcs",
    srcs = glob(["src/*.ts"]),
)

filegroup(
    name = "docs",
    srcs = ["mkdocs.yml"] + glob(["docs/**"]),
    visibility = ["//:__pkg__"],
)

deno_binary(
    name = "typescript-fun",
    main = "main.ts",
    deps = [":srcs"],
)
