load("//third_party/deno:deno_test.bzl", "deno_test")

genrule(
    name = "nb",
    srcs = glob(["**/*.ts"]),
    outs = ["nb.js"],
    cmd = "$(ESBUILD) --bundle --minify $(rootpath nb.ts) > $@",
    toolchains = ["//third_party/esbuild:resolved"],
    visibility = ["//experiments/nbmagic:__pkg__"],
)

deno_test(
    name = "js-kernel.spec",
    srcs = glob(["**/*.ts"]),
    tags = ["requires-network"],
    main = "$(rootpath js-kernel.spec.ts)",
)
