load("//third_party/deno:deno_bundle.bzl", "deno_bundle")
load("//third_party/deno:deno_test.bzl", "deno_test")

deno_bundle(
    name = "nb",
    srcs = glob(["**/*.ts"]),
    out = "nb.js",
    entrypoint = "nb.ts",
    visibility = ["//experiments/nbmagic:__pkg__"],
)

deno_test(
    name = "js-kernel.spec",
    srcs = glob(["**/*.ts"]),
    main = "js-kernel.spec.ts",
)
